--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -13,9 +12,7 @@
   <body>
     <div id="page-wrapper">
       <header id="header">
-        <div class="logo">
-          
-        </div>
+        <div class="logo"></div>
 
         <nav id="nav-bar">
           <ul>
@@ -38,7 +35,13 @@
             placeholder="Enter your email address"
             required
           />
-          <input id="submit" type="submit" value="Get Started" class="btn" />
+          <input
+            id="submit"
+            type="submit"
+            value="Get Started"
+            class="btn"
+            name="submit"
+          />
         </form>
       </section>
 
@@ -49,7 +52,8 @@
             <div class="desc">
               <h2>Premium Materials</h2>
               <p>
-                Our main aim is to become world class developers that will impact the whole world while solving the world problems
+                Our main aim is to become world class developers that will
+                impact the whole world while solving the world problems
               </p>
             </div>
           </div>
@@ -58,7 +62,8 @@
             <div class="desc">
               <h2>Fast Shipping</h2>
               <p>
-                Our Tomatoes must be well received at the end of the day so that they don't spoil our labour
+                Our Tomatoes must be well received at the end of the day so that
+                they don't spoil our labour
               </p>
             </div>
           </div>
@@ -78,11 +83,11 @@
         </section>
         <section id="how-it-works">
           <iframe
-          id="video"
-          height="315"
-          src="https://youtu.be/uZUot2AF8pk"
-          frameborder="0"
-          allowfullscreen
+            id="video"
+            height="315"
+            src="https://youtu.be/uZUot2AF8pk"
+            frameborder="0"
+            allowfullscreen
           ></iframe>
         </section>
         <section id="pricing">
